--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1059,9 +1059,30 @@ input[type=datetime-local],
 input[type=color],
 .site textarea {
 	border: 0.0625rem solid var(--color-1);
+	background-color: var(--color-2);
 	color: var(--color-1);
-	padding: 1rem;
+	padding: 0.5rem;
 	max-width: 100%;
+}
+@media (min-width: 782px) {
+
+	input[type=text],
+	input[type=email],
+	input[type=url],
+	input[type=password],
+	input[type=search],
+	input[type=number],
+	input[type=tel],
+	input[type=date],
+	input[type=month],
+	input[type=week],
+	input[type=time],
+	input[type=datetime],
+	input[type=datetime-local],
+	input[type=color],
+	.site textarea {
+		padding: 1rem;
+	}
 }
 
 input[type=text]:focus,
@@ -1152,6 +1173,7 @@ License: MIT.
 
 	input[type=checkbox],
 	input[type=radio] {
+		cursor: pointer;
 		-webkit-appearance: none;
 		-moz-appearance: none;
 		position: relative;
@@ -3662,6 +3684,14 @@ table.wp-calendar-table caption {
 	background-image: url("./assets/images/search-light.svg");
 }
 
+.is-dark-theme .site-branding .search-form > label {
+	background-image: url("./assets/images/search-light.svg");
+}
+
+.is-dark-theme .site-branding .search-form > label:hover {
+	background-image: url("./assets/images/search.svg");
+}
+
 .site-branding .search-form:focus-within {
 	right: 0;
 	width: calc(100% + 1.75rem);
@@ -3718,6 +3748,10 @@ table.wp-calendar-table caption {
 		width: 2rem;
 		height: 2rem;
 	}
+}
+
+.is-dark-theme .site-branding .search-form .search-submit {
+	background-image: url("./assets/images/search.svg");
 }
 
 .site-footer {
